Fixed biggest compile errors, still data binding problems