@@ -1,20 +1,19 @@
 package de.dreier.mytargets.shared.models.db;
 
-import android.database.Cursor;
+import android.support.annotation.NonNull;
 
 import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 import com.raizlabs.android.dbflow.annotation.Column;
-import org.joda.time.DateTime;
 import com.raizlabs.android.dbflow.annotation.ForeignKey;
 import com.raizlabs.android.dbflow.annotation.ForeignKeyReference;
 import com.raizlabs.android.dbflow.annotation.OneToMany;
 import com.raizlabs.android.dbflow.annotation.PrimaryKey;
 import com.raizlabs.android.dbflow.annotation.Table;
-import com.raizlabs.android.dbflow.config.FlowManager;
 import com.raizlabs.android.dbflow.sql.language.SQLite;
 import com.raizlabs.android.dbflow.structure.BaseModel;
 
+import org.joda.time.DateTime;
 import org.parceler.Parcel;
 
 import java.util.ArrayList;
@@ -26,6 +25,7 @@ import java.util.Map;
 import de.dreier.mytargets.shared.AppDatabase;
 import de.dreier.mytargets.shared.models.IIdSettable;
 import de.dreier.mytargets.shared.models.Target;
+import de.dreier.mytargets.shared.targets.SelectableZone;
 import de.dreier.mytargets.shared.utils.Pair;
 
 @Parcel
@@ -43,13 +43,11 @@ public class Passe extends BaseModel implements IIdSettable {
     public boolean exact;
 
     public List<Shot> shots = new ArrayList<>();
+    public Shot[] shot;
+    public DateTime saveDate = new DateTime();
     @Column(name = "_id")
     @PrimaryKey(autoincrement = true)
     Long id;
-
-    public Shot[] shot;
-    
-    public DateTime saveDate = new DateTime();
 
     public Passe() {
     }
@@ -81,11 +79,10 @@ public class Passe extends BaseModel implements IIdSettable {
         return shots;
     }
 
-    public void sort() {
+    public List<Shot> getSortedShotList() {
+        final List<Shot> shots = getShots();
         Collections.sort(shots);
-        for (int i = 0; i < shots.size(); i++) {
-            shots.get(i).index = i;
-        }
+        return shots;
     }
 
     public Long getId() {
@@ -110,103 +107,70 @@ public class Passe extends BaseModel implements IIdSettable {
         return target.getReachedPoints(this);
     }
 
-    private static Map<Pair<Integer, String>, Integer> getScoreDistribution(long training) {
-        Cursor cursor = FlowManager.getWritableDatabase(AppDatabase.class)
-                .rawQuery("SELECT a.target, a.scoring_style, s.points, s.arrow_index, COUNT(*) " +
-                        "FROM ROUND r " +
-                        "LEFT JOIN ROUND_TEMPLATE a ON r.template=a._id " +
-                        "LEFT JOIN PASSE p ON r._id = p.round " +
-                        "LEFT JOIN SHOOT s ON p._id = s.passe " +
-                        "WHERE r.training=" + training + " " +
-                        "GROUP BY a.target, a.scoring_style, s.points, s.arrow_index", null);
+    public static List<Pair<Target, List<Round>>> groupByTarget(List<Round> rounds) {
+        return Stream.of(rounds)
+                .groupBy(value -> new Pair<>(value.info.target.getId(), value.info.target.scoringStyle))
+                .map(value1 -> new Pair<>(value1.getValue().get(0).info.target, value1.getValue()))
+                .collect(Collectors.toList());
+    }
 
-        if (!cursor.moveToFirst()) {
-            cursor.close();
-            throw new IllegalStateException("There must be at least one round!");
+    @NonNull
+    private static Map<SelectableZone, Integer> getRoundScores(List<Round> rounds) {
+        final Target t = rounds.get(0).info.target;
+        Map<SelectableZone, Integer> scoreCount = getAllPossibleZones(t);
+        for (Round round : rounds) {
+            for (Passe p : round.getPasses()) {
+                for (Shot s : p.shot) {
+                    SelectableZone tuple = new SelectableZone(s.zone, t.getModel().getZone(s.zone),
+                            t.zoneToString(s.zone, s.index), t.getPointsByZone(s.zone, s.index));
+                    final Integer integer = scoreCount.get(tuple);
+                    if (integer != null) {
+                        int count = integer + 1;
+                        scoreCount.put(tuple, count);
+                    }
+                }
+            }
         }
-        Target t = new Target(cursor.getInt(0), cursor.getInt(1));
-        Map<Pair<Integer, String>, Integer> scoreCount = new HashMap<>();
+        return scoreCount;
+    }
+
+    @NonNull
+    private static Map<SelectableZone, Integer> getAllPossibleZones(Target t) {
+        Map<SelectableZone, Integer> scoreCount = new HashMap<>();
         for (int arrow = 0; arrow < 3; arrow++) {
-            for (int zone = -1; zone < t.getModel().getZoneCount(); zone++) {
-                scoreCount.put(new Pair<>(t.getPointsByZone(zone, arrow),
-                        t.zoneToString(zone, arrow)), 0);
+            final List<SelectableZone> zoneList = t.getSelectableZoneList(arrow);
+            for (SelectableZone selectableZone : zoneList) {
+                scoreCount.put(selectableZone, 0);
             }
             if (!t.getModel().dependsOnArrowIndex()) {
                 break;
             }
         }
-        do {
-            if (cursor.isNull(2)) {
-                continue;
-            }
-            int zone = cursor.getInt(2);
-            int arrow = cursor.getInt(3);
-            int count = cursor.getInt(4);
-            Pair<Integer, String> tuple = new Pair<>(t.getPointsByZone(zone, arrow),
-                    t.zoneToString(zone, arrow));
-            count += scoreCount.get(tuple);
-            scoreCount.put(tuple, count);
-        } while (cursor.moveToNext());
-        cursor.close();
         return scoreCount;
     }
 
-
-    public static List<Pair<String, Integer>> getTopScoreDistribution(long training) {
-        Map<Pair<Integer, String>, Integer> scoreCount = getScoreDistribution(training);
-        List<Map.Entry<Pair<Integer, String>, Integer>> sortedScore = Stream.of(scoreCount)
-                .sorted((lhs, rhs) -> {
-                    if (lhs.getKey().getFirst().equals(rhs.getKey().getFirst())) {
-                        return -lhs.getKey().getSecond().compareTo(rhs.getKey().getSecond());
-                    }
-                    return rhs.getKey().getFirst() - lhs.getKey().getFirst();
-                })
+    public static List<Pair<String, Integer>> getTopScoreDistribution(List<Map.Entry<SelectableZone, Integer>> sortedScore) {
+        final List<Pair<String, Integer>> result = Stream.of(sortedScore)
+                .map(value -> new Pair<>(value.getKey().text, value.getValue()))
                 .collect(Collectors.toList());
 
         // Collapse first two entries if they yield the same score points,
         // e.g. 10 and X => {X, 10+X, 9, ...}
         if (sortedScore.size() > 1) {
-            Map.Entry<Pair<Integer, String>, Integer> first = sortedScore.get(0);
-            Map.Entry<Pair<Integer, String>, Integer> second = sortedScore.get(1);
-            if (first.getKey().getFirst().equals(second.getKey().getFirst())) {
-                final String newTitle = second.getKey().getSecond() + "+" + first.getKey()
-                        .getSecond();
-                final int newValue = second.getValue() + first.getValue();
-                sortedScore.get(1).getKey().setSecond(newTitle);
-                sortedScore.get(1).setValue(newValue);
-                second.setValue(newValue);
+            Map.Entry<SelectableZone, Integer> first = sortedScore.get(0);
+            Map.Entry<SelectableZone, Integer> second = sortedScore.get(1);
+            if (first.getKey().points == second.getKey().points) {
+                final String newTitle = second.getKey().text + "+" + first.getKey().text;
+                result.set(1, new Pair<>(newTitle, second.getValue() + first.getValue()));
             }
         }
-        return Stream.of(sortedScore)
-                .map(value -> new Pair<>(value.getKey().getSecond(), value.getValue()))
+        return result;
+    }
+
+    public static List<Map.Entry<SelectableZone, Integer>> getSortedScoreDistribution(List<Round> rounds) {
+        Map<SelectableZone, Integer> scoreCount = getRoundScores(rounds);
+        return Stream.of(scoreCount)
+                .sorted((lhs, rhs) -> lhs.getKey().compareTo(rhs.getKey()))
                 .collect(Collectors.toList());
     }
-
-    public static float getAverageScore(long training) {
-        Cursor res = FlowManager.getWritableDatabase(AppDatabase.class).rawQuery(
-                "SELECT s.points, a.target, a.scoring_style, s.arrow_index " +
-                        "FROM ROUND r " +
-                        "LEFT JOIN PASSE p ON r._id = p.round " +
-                        "LEFT JOIN SHOOT s ON p._id = s.passe " +
-                        "LEFT JOIN ROUND_TEMPLATE a ON a._id = r.template " +
-                        "WHERE r.training = " + training + " " +
-                        "ORDER BY r._id ASC, p._id ASC, s._id ASC", null);
-        int count = 0;
-        int sum = 0;
-        if (res.moveToFirst()) {
-            do {
-                count++;
-                sum += new Target(res.getInt(1), res.getInt(2))
-                        .getPointsByZone(res.getInt(0), res.getInt(3));
-            } while (res.moveToNext());
-        }
-        res.close();
-        float average = 0;
-        if (count > 0) {
-            average = ((sum * 100) / count) / 100.0f;
-        }
-        return average;
-    }
-
-
 }
